--- a/api/vercel.json
+++ b/api/vercel.json
@@ -5,8 +5,8 @@
     ],
     "routes": [
         {
-          "src": "/(.*)",
-          "dest": "/"
+          "src": "/src/(.*)",
+          "dest": "/src/"
         }
     ]
   }
