--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,12 +1,12 @@
 {
     "version":2,
     "builds": [
-      { "src": "src/index.ts", "use": "@vercel/node" }
+      { "src": "*.ts", "use": "@vercel/node" }
     ],
     "routes": [
         {
-          "src": "/src/(.*)",
-          "dest": "/src/"
+          "src": "/(.*)",
+          "dest": "/"
         }
     ]
   }
